--- a/templates/gjobs/jobs.html
+++ b/templates/gjobs/jobs.html
@@ -1,20 +1,20 @@
 {%extends "gjobs/base.html"%}
 {%block main%}
 <div class="ct">
-<table cellspacing="0" >
+<table width=100% cellspacing="0" >
     <thead>
         <tr>
-            <th id="JOBS"    style="width:20%;">JOBS    </th>
-            <th id="JobsID"  style="width:5%;" >JobsID  </th>
-            <th id="User"    style="width:5%;" >User    </th>
-            <th id="Owner"   style="width:5%;" >Owner   </th>
-            <th id="ST-time" style="width:10%;">ST-time </th>
-            <th id="ED-time" style="width:10%;">ED-time </th>
-            <th id="Spend"   style="width:5%;" >Spend   </th>
-            <th id="Exc-host" style="width:10%;">Exc-host</th>
-            <th id="Status"  style="width:10%;">Status  </th>
-            <th id="Result"  style="width:10%;">Result  </th>
-            <th id="Operate" style="width:10%;">Operation</th>
+            <th style="width:20%;">JOBS    </th>
+            <th style="width:5%;" >JobsID  </th>
+            <th style="width:5%;" >User    </th>
+            <th style="width:5%;" >Owner   </th>
+            <th style="width:10%;">ST-time </th>
+            <th style="width:10%;">ED-time </th>
+            <th style="width:5%;" >Spend   </th>
+            <th style="width:10%;">Exc-host</th>
+            <th style="width:10%;">Status  </th>
+            <th style="width:10%;">Result  </th>
+            <th style="width:20%;" class ="last-th">Operate</th>
         </tr>
         <!-- <tr> -->
         <!--     <th style="width:20%;">任务</th> -->
@@ -30,8 +30,7 @@
         <!--     <th style="width:10%;"></th> -->
         <!-- </tr> -->
     </thead>
-    <tbody style="display:block">
-    {% for i in range10 %}
+    <tbody id="tr-tmplate">
         <tr>
             <td id="JOBS"    >../dview/tmp/tsark3/simcmd/xxxxx/123456789</td>
             <td id="JobsID"  >432131</td>
@@ -43,9 +42,8 @@
             <td id="Exc-host">dlinux25</td>
             <td id="Status"  >Finish</td>
             <td id="Result"  >compile-Error ...</td>
-            <td id="Operate" > <button>STOP</button> </td>
+            <td id="Operate" > <div class="button black bigrounded">STOP</div> </td>
         </tr>
-    {% endfor %}
     </tbody>
 </table>
 </div>
