--- a/static/gjobs/css/gjobs.less
+++ b/static/gjobs/css/gjobs.less
@@ -29,6 +29,7 @@ body{
     // font-family: monospace,arial,sans-serif;
     font-family: "Hiragino Sans GB","Microsoft YaHei","WenQuanYi Micro Hei", sans-serif;
     font-size:12px;
+    color:#777;
 }   
 
 .mid-bar {
@@ -128,6 +129,11 @@ tr td {
 }
 tbody tr {
     height:28px;
+    &:hover{
+        background-color:@c-bar*2.3;
+        color:@c-bar*0.8;
+        opacity:0.8;
+    }
 }
 table {
     // border:2px @c-bar solid;
