--- a/templates/gjobs/jobs.html
+++ b/templates/gjobs/jobs.html
@@ -1,22 +1,28 @@
 {%extends "gjobs/base.html"%}
 {%block main%}
+<div class="jobs-title">
+<div class="avata"> </div>
+<div class="jobs-nav-bar"> <a href="">Malone</a> /<a href="">Whale2</a> /<a href="">WCDMA-regression</a>  </div>
+</div>
 <div class="ct">
 <table width=100% cellspacing="0" >
     <thead>
         <tr>
-            <th style="width:20%;">JOBS    </th>
+            <th style="width:2%;">    </th>
+            <th style="width:23%;">JOBS    </th>
             <th style="width:5%;" >JobsID  </th>
             <th style="width:5%;" >User    </th>
             <th style="width:5%;" >Owner   </th>
             <th style="width:10%;">ST-time </th>
             <th style="width:10%;">ED-time </th>
             <th style="width:5%;" >Spend   </th>
-            <th style="width:10%;">Exc-host</th>
+            <th style="width:5%;">Exc-host</th>
             <th style="width:10%;">Status  </th>
             <th style="width:10%;">Result  </th>
-            <th style="width:20%;" class ="last-th">Operate</th>
+            <th style="width:10%;" class ="last-th">Operate</th>
         </tr>
         <!-- <tr> -->
+            <!-- <th style="width:2%;">    </th> -->
         <!--     <th style="width:20%;">任务</th> -->
         <!--     <th style="width:10%;">任务ID</th> -->
         <!--     <th style="width:10%;">用户</th> -->
@@ -31,7 +37,9 @@
         <!-- </tr> -->
     </thead>
     <tbody id="tr-tmplate">
+    {%for i in range10%}
         <tr>
+            <td id="select"  ><input type="checkbox" name="xxx" value="43212"></td>
             <td id="JOBS"    >../dview/tmp/tsark3/simcmd/xxxxx/123456789</td>
             <td id="JobsID"  >432131</td>
             <td id="User"    >marlone</td>
@@ -42,10 +50,21 @@
             <td id="Exc-host">dlinux25</td>
             <td id="Status"  >Finish</td>
             <td id="Result"  >compile-Error ...</td>
-            <td id="Operate" > <div class="button black bigrounded">STOP</div> </td>
+            <td id="Operate" > <div class="button rosy small bigrounded">Stop</div> </td>
         </tr>
+    {%endfor%}
     </tbody>
 </table>
+<div class="tb-footer"> 
+<div class="button rmv-c small selectall" > 全选</div> 
+<div class="button rmv-c small unselect" > 反选</div> 
+<div class="button rmv-c small "> remove</div> 
+<div class="button add-c small "> add</div> 
+<div class="button add-c small "> add-list</div> 
+<div class="button add-l-c small "> Commit-all</div> 
+<div class="button cmt-c small "> Stop-all</div> 
+<!-- <div class="button cmt-c small bigrounded"> Stop-all</div> --> 
+</div>
 </div>
 {% load staticfiles %}
 <!-- <script src="{% static 'gjobs/js/gjobs.js'%}"></script> -->
