--- a/templates/gjobs/base.html
+++ b/templates/gjobs/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>超级理发师</title>
+    <title>Gjobs</title>
      {% include "gjobs/css.html" %}       
 <script type="text/javascript" >
 if (!window.console || !console.firebug)
