--- a/templates/gjobs/index.html
+++ b/templates/gjobs/index.html
@@ -85,7 +85,7 @@
 <div class="tb-footer"> 
 <div class="button rmv-c small selectall" > 全选</div> 
 <div class="button rmv-c small reverse" > 反选</div> 
-<div class="button rmv-c small unselect" > 反不选</div> 
+<div class="button rmv-c small unselect" > 全不选</div> 
 <div class="button rmv-c small "> remove</div> 
 <div class="button add-c small "> add</div> 
 <div class="button add-c small "> add-list</div> 
