--- a/templates/gjobs/jobs.html
+++ b/templates/gjobs/jobs.html
@@ -57,7 +57,8 @@
 </table>
 <div class="tb-footer"> 
 <div class="button rmv-c small selectall" > 全选</div> 
-<div class="button rmv-c small unselect" > 反选</div> 
+<div class="button rmv-c small reverse" > 反选</div> 
+<div class="button rmv-c small unselect" > 全不选</div> 
 <div class="button rmv-c small "> remove</div> 
 <div class="button add-c small "> add</div> 
 <div class="button add-c small "> add-list</div> 
