--- a/static/gjobs/css/gjobs.less
+++ b/static/gjobs/css/gjobs.less
@@ -328,6 +328,20 @@ p {
 .last-th{
     border-right: 0px none @c-c-w;
 }
+.his{
+    display:none;
+    background-color:#444549*1.2;
+    color:#ccc;
+    &:hover {
+        background-color:#444549*1.4;
+        color:#ccc;
+        opacity:1.0;
+    }
+    td {
+        border-right:1px none #fff;
+        border-top:2px none #fff;
+    }
+}      
 // button{
 //     border:1px #fff block;
 //     background-color:#dd4455;
