--- a/static/gjobs/css/gjobs.less
+++ b/static/gjobs/css/gjobs.less
@@ -330,11 +330,11 @@ p {
 }
 .his{
     display:none;
-    background-color:#444549*1.2;
-    color:#ccc;
+    background-color:#444549*1.6;
+    color:#ddd;
     &:hover {
-        background-color:#444549*1.4;
-        color:#ccc;
+        background-color:#444549*1.8;
+        color:#ddd;
         opacity:1.0;
     }
     td {
@@ -342,14 +342,3 @@ p {
         border-top:2px none #fff;
     }
 }      
-// button{
-//     border:1px #fff block;
-//     background-color:#dd4455;
-//     color:#fff;
-//     -webkit-border-radius: 15px;
-//     -moz-border-radius: 15px;
-//     border-radius: 15px;
-//     cursor:pointer;
-//     font-size:12px;
-// }
-
