--- a/templates/gjobs/css.html
+++ b/templates/gjobs/css.html
@@ -2,7 +2,7 @@
 {% block css %}
     <link href="{% static 'gjobs/css/gjobs.less' %}" rel="stylesheet/less" type="text/css">
     <link rel="stylesheet" href="{% static 'gjobs/css/button.css' %}">
-    <link rel="stylesheet" href="{% static 'gjobs/css/gjobs.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'gjobs/css/gjobs.css' %}"> -->
     <!-- <script src="{% static 'pinx/wtfall/js/less.jss' %}" type="text/javascript"></script> -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
     <script src="{% static 'gjobs/js/jquery.min.2.1.1.js'%}"></script>
