--- a/templates/gjobs/index.html
+++ b/templates/gjobs/index.html
@@ -10,7 +10,7 @@
 <!-- <hr> -->
 <div class="jobs-title">
 <div class="avata"></div>
-<div class="jobs-nav-bar"> <a href="">Malone</a> /<a href="">Whale2</a> /<a href="">WCDMA-regression</a>  </div>
+<div class="jobs-nav-bar"> <a href="">{{project.founder.username}}</a> /<a href="">{{project.name}}</a> /<a href="">{{group1.name}}</a>  </div>
 </div>
 {%for group in project.group.all%}
 <div class="ct"> 
@@ -46,9 +46,9 @@
     </thead>
     <tbody id="tr-tmplate">
 {%for job in group.jobs.all%}
-{%if job.jobinfo_set.all%}
-{%for his in job.jobinfo_set.all%}
-        <tr>
+{%if job.jobhis_set.all%} 
+{%for his in job.jobhis_set.all|slice:"1"%}
+        <tr id="{{job.slug}}">
             <td id="select"  ><input type="checkbox" name="{{his.jobsid}}" value="{{his.jobsid}}"></td>
             <td id="JOBS"    ><strong>{{job.path}}</strong></td>
             <td id="JobsID"  >{{his.jobsid}}</td>
@@ -56,11 +56,27 @@
             <td id="Owner"   >{{his.owner}}</td>
             <td id="ST-time" >{{his.sttime}}</td>
             <td id="ED-time" >{{his.edtime}}</td>
-            <td id="Spend"   >spendtime</td>
+            <td id="Spend"   >{{his.spend}}</td>
             <td id="Exc-host">dlinux25</td>
-            <td id="Status"  >{{his.status}}</td>
-            <td id="Result"  >{{his.Result}}</td>
+            <td id="Status"  >{{his.get_status_display}}</td>
+            <td id="Result"  >{{his.result}}</td>
             <td id="Operate" class ="last-th" > <div class = "button rosy small bigrounded">STOP</div> </td>
+        </tr>
+{%endfor%}
+{%for his in job.jobhis_set.all|slice:"1:"%}
+        <tr class="his {{job.slug}}" >
+            <td id="select"  ></td>
+            <td id="JOBS"    ></td>
+            <td id="JobsID"  >{{his.jobsid}}</td>
+            <td id="User"    >{{his.user}}</td>
+            <td id="Owner"   >{{his.owner}}</td>
+            <td id="ST-time" >{{his.sttime}}</td>
+            <td id="ED-time" >{{his.edtime}}</td>
+            <td id="Spend"   >{{his.spend}}</td>
+            <td id="Exc-host">dlinux25</td>
+            <td id="Status"  >{{his.get_status_display}}</td>
+            <td id="Result"  >{{his.result}}</td>
+            <td id="Operate" class ="last-th" > <div class = "button rmv-c small bigrounded">delete</div> </td>
         </tr>
 {%endfor%}
 {%else%}
