--- a/templates/gjobs/userindex.html
+++ b/templates/gjobs/userindex.html
@@ -7,7 +7,11 @@
 <div class="proj-title-bar"> <p> Projects </p> </div>
 {% for project in projects %}
 <a href="/gjobs/user/{{user.username}}/{{project.slug}}">
-<div class="proj-bar"> <p>{{project.name}} </p> </div></a> 
+{% if project == act_proj%}
+    <div class="proj-bar proj-active"> <p>{{project.name}} </p> </div></a> 
+{%else%}
+    <div class="proj-bar "> <p>{{project.name}} </p> </div></a> 
+{%endif%}
 {% endfor %}
 </div>
 <div class="right">
